--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work from home</title>
-    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/styles.css">
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
@@ -174,6 +174,25 @@
     </div>
   </div>
 </div>
+
+<!-- Footer -->
+
+<footer>
+  <div class="footer">
+    <p>Built by Marcel Thiemann in Toronto &copy; 2020</p>
+    <button class="btn btn-link btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      Disclaimer
+    </button>
+    <div class="accordion" id="accordionExample">
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+        <div class="card-body container">
+          <hr>
+          This is a personal collection of content that was assembled based on research and surveying. Any views or opinions represented on this website are personal and belong solely to the owner and do not represent those of third parties. All content provided on this website are for informational purposes only. The owner makes no representations as to the accuracy or completeness of any information on this site or found by following the third party links on this page. The owner will not be liable for any errors or omissions in this information nor for the availability of this information. The owner will not be liable for any losses, injuries, or damages from the display or use of the content on this site.
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <!-- Parallax script for hero images, source: https://simpleparallax.com/ -->
 
