--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work from home</title>
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -66,6 +67,7 @@
         their productivity when they're not at the office.</p>
       <div class="fat-line-vertical-left stage-pink"></div>
       <div class="fat-line-horizontal-left stage-pink"></div>
+      <img class="icon-right animate__animated" data-animation="animate__fadeInRight" src="./assets/icons/missyou.png" alt="Keep in touch" />
     </div>
   </div>
 </div>
@@ -87,6 +89,7 @@
         their productivity when they're not at the office.</p>
       <div class="fat-line-vertical-right stage-blue"></div>
       <div class="fat-line-horizontal-right stage-blue"></div>
+      <img class="icon-left animate__animated" data-animation="animate__fadeInLeft" src="./assets/icons/letter.png" alt="Sharing is caring" />
     </div>
   </div>
 </div>
@@ -108,6 +111,7 @@
         their productivity when they're not at the office.</p>
       <div class="fat-line-vertical-left stage-brown"></div>
       <div class="fat-line-horizontal-left stage-brown"></div>
+      <img class="icon-right animate__animated" data-animation="animate__fadeInRight" src="./assets/icons/cactus.png" alt="Keep in touch" />
     </div>
   </div>
 </div>
@@ -129,6 +133,7 @@
         their productivity when they're not at the office.</p>
       <div class="fat-line-vertical-right stage-pink"></div>
       <div class="fat-line-horizontal-right stage-pink"></div>
+      <img class="icon-left animate__animated" data-animation="animate__fadeInLeft" src="./assets/icons/donut.png" alt="Sharing is caring" />
     </div>
   </div>
 </div>
@@ -150,6 +155,7 @@
         their productivity when they're not at the office.</p>
       <div class="fat-line-vertical-left stage-blue"></div>
       <div class="fat-line-horizontal-left stage-blue"></div>
+      <img class="icon-right animate__animated" data-animation="animate__fadeInRight" src="./assets/icons/bulb.png" alt="Keep in touch" />
     </div>
   </div>
 </div>
@@ -171,6 +177,7 @@
         their productivity when they're not at the office.</p>
       <div class="fat-line-vertical-right stage-pink stage-brown"></div>
       <div class="fat-line-horizontal-right stage-pink stage-brown"></div>
+      <img class="icon-left animate__animated" data-animation="animate__fadeInLeft" src="./assets/icons/atom.png" alt="Sharing is caring" />
     </div>
   </div>
 </div>
@@ -180,17 +187,9 @@
 <footer>
   <div class="footer">
     <p>Built by Marcel Thiemann in Toronto &copy; 2020</p>
-    <button class="btn btn-link btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="This is a personal collection of content that was assembled based on research and surveying. Any views or opinions represented on this website are personal and belong solely to the owner and do not represent those of third parties. All content provided on this website are for informational purposes only. The owner makes no representations as to the accuracy or completeness of any information on this site or found by following the third party links on this page. The owner will not be liable for any errors or omissions in this information nor for the availability of this information. The owner will not be liable for any losses, injuries, or damages from the display or use of the content on this site.">
       Disclaimer
     </button>
-    <div class="accordion" id="accordionExample">
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-        <div class="card-body container">
-          <hr>
-          This is a personal collection of content that was assembled based on research and surveying. Any views or opinions represented on this website are personal and belong solely to the owner and do not represent those of third parties. All content provided on this website are for informational purposes only. The owner makes no representations as to the accuracy or completeness of any information on this site or found by following the third party links on this page. The owner will not be liable for any errors or omissions in this information nor for the availability of this information. The owner will not be liable for any losses, injuries, or damages from the display or use of the content on this site.
-        </div>
-      </div>
-    </div>
   </div>
 </footer>
 
@@ -207,6 +206,14 @@
   overflow: false,
   orientation: "down",
 });
+</script>
+
+<!-- Popover Script -->
+
+<script>
+$(function () {
+  $('[data-toggle="popover"]').popover()
+})
 </script>
 
 </body>
