Optimized landing page for mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section class="header-parallax">
     <div class="stage container">
         <div>
-            <h1>How to win at<br>working from home</h1>
+            <h1>How to win at working from home</h1>
             <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
                 their productivity when they're not at the office.</p>
         <a id="btn1">
@@ -61,10 +61,11 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-left stage-pink">
-      <h2 class="bigger">Keep in touch—<br>and take it seriously</h2>
+      <h2 class="bigger">Keep in touch—and take it seriously</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
+      <div class="mobile-stage mobile-pink"></div>
       <div class="fat-line-vertical-left stage-pink"></div>
       <div class="fat-line-horizontal-left stage-pink"></div>
       <img class="icon-right animate__animated" data-animation="animate__fadeInRight" src="./assets/icons/missyou.png" alt="Keep in touch" />
@@ -83,10 +84,11 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-right stage-blue">
-      <h2 class="bigger">Overshare—<br>but it might not be enough</h2>
+      <h2 class="bigger">Overshare—but it might not be enough</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
+      <div class="mobile-stage mobile-blue"></div>
       <div class="fat-line-vertical-right stage-blue"></div>
       <div class="fat-line-horizontal-right stage-blue"></div>
       <img class="icon-left animate__animated" data-animation="animate__fadeInLeft" src="./assets/icons/letter.png" alt="Sharing is caring" />
@@ -105,10 +107,11 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-left stage-brown">
-      <h2 class="bigger">Set up your workspace—<br>but don't be too strict about it</h2>
+      <h2 class="bigger">Set up your workspace—but don't be too strict about it</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
+      <div class="mobile-stage mobile-brown"></div>
       <div class="fat-line-vertical-left stage-brown"></div>
       <div class="fat-line-horizontal-left stage-brown"></div>
       <img class="icon-right animate__animated" data-animation="animate__fadeInRight" src="./assets/icons/cactus.png" alt="Keep in touch" />
@@ -127,10 +130,11 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-right stage-pink">
-      <h2 class="bigger">Know when to stop—<br>otherwise there's no stopping</h2>
+      <h2 class="bigger">Know when to stop—otherwise there's no stopping</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
+      <div class="mobile-stage mobile-pink"></div>
       <div class="fat-line-vertical-right stage-pink"></div>
       <div class="fat-line-horizontal-right stage-pink"></div>
       <img class="icon-left animate__animated" data-animation="animate__fadeInLeft" src="./assets/icons/donut.png" alt="Sharing is caring" />
@@ -149,10 +153,11 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-left stage-blue">
-      <h2 class="bigger">Measure your productivity—<br>but your old tools won't work</h2>
+      <h2 class="bigger">Measure your productivity—but your old tools won't work</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
+      <div class="mobile-stage mobile-blue"></div>
       <div class="fat-line-vertical-left stage-blue"></div>
       <div class="fat-line-horizontal-left stage-blue"></div>
       <img class="icon-right animate__animated" data-animation="animate__fadeInRight" src="./assets/icons/bulb.png" alt="Keep in touch" />
@@ -171,10 +176,11 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-right stage-brown">
-      <h2 class="bigger">Adjust your work routines—<br>and get ready for the new normal</h2>
+      <h2 class="bigger">Adjust your work routines—and get ready for the new normal</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
+      <div class="mobile-stage mobile-brown"></div>
       <div class="fat-line-vertical-right stage-pink stage-brown"></div>
       <div class="fat-line-horizontal-right stage-pink stage-brown"></div>
       <img class="icon-left animate__animated" data-animation="animate__fadeInLeft" src="./assets/icons/atom.png" alt="Sharing is caring" />
