--- a/index.html
+++ b/index.html
@@ -20,20 +20,17 @@
 <!-- Navbar -->
 
 <nav class="navbar navbar-expand-lg navbar-light my-navbar">
-    <a class="navbar-brand marker" href="#">Work from home</a>
+    <a class="navbar-brand marker" href="./">Work from home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Best practices <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="./">Best practices <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="./about">About</a>
         </li>
       </ul>
     </div>
