Deactivated animation for mobile

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="copy-stage" id="scroll-target">
   <div class="container">
     <div class="color-stage-right stage-blue">
-      <h2 class="bigger">Overshare—but it might not be enough</h2>
+      <h2 class="bigger">Overshare—but it might still not be enough</h2>
       <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office. As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
         their productivity when they're not at the office.</p>
