Used html validator on landing page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/styles.css">
-    <script type="text/javascript" src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     
@@ -79,7 +79,7 @@
 
 <!-- Copy stage 2, aligned right -->
 
-<div class="copy-stage" id="scroll-target">
+<div class="copy-stage">
   <div class="container">
     <div class="color-stage-right stage-blue">
       <h2 class="bigger">Overshare—but it might still not be enough</h2>
@@ -102,7 +102,7 @@
 
 <!-- Copy stage 3, aligned left -->
 
-<div class="copy-stage" id="scroll-target">
+<div class="copy-stage">
   <div class="container">
     <div class="color-stage-left stage-brown">
       <h2 class="bigger">Set up your workspace—but don't be too strict about it</h2>
@@ -125,7 +125,7 @@
 
 <!-- Copy stage 4, aligned right -->
 
-<div class="copy-stage" id="scroll-target">
+<div class="copy-stage">
   <div class="container">
     <div class="color-stage-right stage-pink">
       <h2 class="bigger">Know when to stop—otherwise there's no stopping</h2>
@@ -148,7 +148,7 @@
 
 <!-- Copy stage 5, aligned left -->
 
-<div class="copy-stage" id="scroll-target">
+<div class="copy-stage">
   <div class="container">
     <div class="color-stage-left stage-blue">
       <h2 class="bigger">Measure your productivity—but your old tools won't work</h2>
@@ -171,7 +171,7 @@
 
 <!-- Copy stage 6, aligned right -->
 
-<div class="copy-stage" id="scroll-target">
+<div class="copy-stage">
   <div class="container">
     <div class="color-stage-right stage-brown">
       <h2 class="bigger">Adjust your work routines—and get ready for the new normal</h2>
