--- a/backup_parallax.html
+++ b/backup_parallax.html
@@ -176,3 +176,25 @@
 
 </body>
 </html>
+
+
+
+
+
+<!-- Broken header parallax (does not work on mobile devices) -->
+
+<section class="header-parallax">
+  <div class="stage container">
+      <div>
+          <h1>How to win at working from home</h1>
+          <p>As working from home is becoming the new normal, learn more about what seasoned remote workers do to boost 
+              their productivity when they're not at the office.</p>
+      <a id="btn1">
+          <svg class="bi bi-arrow-down" width="4em" height="4em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M4.646 9.646a.5.5 0 01.708 0L8 12.293l2.646-2.647a.5.5 0 01.708.708l-3 3a.5.5 0 01-.708 0l-3-3a.5.5 0 010-.708z" clip-rule="evenodd"/>
+              <path fill-rule="evenodd" d="M8 2.5a.5.5 0 01.5.5v9a.5.5 0 01-1 0V3a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+            </svg>
+      </a>
+      </div>
+  </div>
+</section>
