Remove background-attachment on mobile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <!-- Header image mobile -->
 
-<section class="header-mobile">
+<!-- <section class="header-mobile">
   <div class="stage container">
       <div>
           <h1>How to win at working from home</h1>
@@ -70,7 +70,7 @@
       </a>
       </div>
   </div>
-</section>
+</section> -->
 
 <!-- Copy stage 1, aligned left -->
 
