Added header to about page

--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
     <title>Work from home</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="./about-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -35,3 +36,14 @@
       </ul>
     </div>
   </nav>
+
+  <!-- Header -->
+
+  <section class="about-parallax">
+    <div class="stage container">
+        <div>
+            <h1>About this project</h1>
+            <p>Learn more about how this project started and its methodology.</p>
+        </div>
+    </div>
+  </section>
