--- a/about/index.html
+++ b/about/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-deferred@1"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/styles.css">
-    <script type="text/javascript" src="../scripts.js"></script>
+    <script src="../scripts.js"></script>
 </head>
 <body>
     
@@ -37,13 +39,102 @@
     </div>
   </nav>
 
-  <!-- Header -->
+<!-- Header -->
 
-  <section class="about-parallax">
-    <div class="stage container">
-        <div>
-            <h1>About this project</h1>
-            <p>Learn more about how this project started and its methodology.</p>
-        </div>
+<section class="about-parallax">
+  <div class="stage container">
+      <div>
+          <h1>About this project</h1>
+          <p>Learn more about how this project started and its methodology.</p>
+      </div>
+  </div>
+</section>
+
+<!-- Spacer -->
+
+<div class="spacer"></div>
+
+<!-- Bio -->
+
+<div class="container about">
+  <div>
+    <h2>Background & methodology</h2>
+  </div>
+  <div class="row">
+    <div class="col-sm-2">
+      xx
     </div>
-  </section>
+    <div class="col-sm-8">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      </p>
+      <p>
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+        mollit anim id est laborum.
+      </p>
+    </div>
+    <div class="col-sm-2 no-mobile"></div>
+  </div>
+</div>
+
+<!-- Spacer -->
+
+<div class="spacer"></div>
+
+<!-- Location
+
+<div class="container about">
+  <div>
+    <h2>Input from global hot spots in technology</h2>
+  </div>
+  <div class="row">
+    <div class="col-sm-3">
+      <img class="globe animate__animated" data-animation="animate__fadeInLeft" src="../assets/icons/globe.png" alt="Globe" />
+    </div>
+    <div class="col-sm-8">
+      <div class="row mt-3 animate__animated" data-animation="animate__fadeInRight">
+        <div class="col-sm-1">
+          <img src="../assets/icons/pin2.png" class="pin" alt="Location">
+        </div>  
+        <div class="col-sm-11">
+          <h5 class="about">San Francisco, California</h5>
+        </div>
+      </div>
+      <div class="row mt-3 animate__animated" data-animation="animate__fadeInRight">
+        <div class="col-sm-1">
+          <img src="../assets/icons/pin2.png" class="pin" alt="Location">
+        </div>  
+        <div class="col-sm-11">
+          <h5 class="about">New York, New York</h5>
+        </div>
+      </div>
+      <div class="row mt-3 animate__animated" data-animation="animate__fadeInRight">
+        <div class="col-sm-1">
+          <img src="../assets/icons/pin2.png" class="pin" alt="Location">
+        </div>  
+        <div class="col-sm-11">
+          <h5 class="about">Berlin, Germany</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Spacer 
+
+<div class="spacer"></div> -->
+
+<!-- Chart 1 -->
+
+<div class="container">
+  <div class="chart">
+    <canvas id="myChart"></canvas>
+  </div>
+</div>
+
+<!-- Scripts for charts -->
+
+<script src="charts.js"></script>
